--- a/testblog/mainpage/templates/mainpage/bio.html
+++ b/testblog/mainpage/templates/mainpage/bio.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="container-flex">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 text-center">
         <h1>Тимур Даянов</h1>
       </div>
     </div>
@@ -31,7 +31,7 @@
         заинтересовало написание Telegram-ботов, парсинг данных, разработка GUI-приложений. Также интересно направление
         frontend-разработки, но оно менее приоритено.</p>
         <p>С огромным желанием приступлю к работе в паре с опытным наставником, для дальнейшего развития.</p>
-        <p><h3>Мой стек на данный момент:</h3>
+        <p><h3>Мой стек на данный момент</h3>
         <ul>
           <li>Python 3.12</li>
           <li>Django 5</li>
