--- a/testblog/mainpage/templates/mainpage/bio.html
+++ b/testblog/mainpage/templates/mainpage/bio.html
@@ -58,7 +58,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-        <p><a class="link-offset-2 link-underline link-underline-opacity-0" href="https://stepik.org/course/191774/info">Stepik. Введение в SQL</a></p>
+        <p><a class="link-offset-2 link-underline link-underline-opacity-0" href="https://stepik.org/course/191774/info">Stepik. Введение в SQL</a></p><br>
         <img src="{% static 'mainpage/img/sql.png' %}" class="img-fluid">
       </div>
       <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
