--- a/testblog/mainpage/templates/mainpage/bio.html
+++ b/testblog/mainpage/templates/mainpage/bio.html
@@ -7,14 +7,14 @@
 {% block content %}
   <div class="container-flex">
     <div class="row">
-      <div class="col-12 text-center">
+      <div class="col-12 text-center" style="color: rgb(255,255,255)">
         <h1>Тимур Даянов</h1>
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" style="color: rgb(255,255,255)">
         <p>Я закончил Челябинский Государственный университет в 2016 году, специалист таможенного дела.
         С ноября 2018 года по настоящее время работаю в Госавтоинспекции города Челябинска, с мая 2022 года занимаю должность
         инженера-электроника группы связи и специальной техники.</p>
@@ -50,35 +50,35 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <h2>Курсы которые я окончил</h2>
+      <div class="col-12" style="color: rgb(255,255,255)">
+        <h2>Курсы которые я окончил:</h2>
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="color: rgb(255,255,255)">
         <p><a class="link-offset-2 link-underline link-underline-opacity-0" href="https://stepik.org/course/191774/info">Stepik. Введение в SQL</a></p><br>
         <img src="{% static 'mainpage/img/sql.png' %}" class="img-fluid">
       </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="color: rgb(255,255,255)">
         <p><a class="link-offset-2 link-underline link-underline-opacity-0" href="https://stepik.org/course/58852/info">Stepik. Поколение Python": курс для начинающих</a></p>
         <img src="{% static 'mainpage/img/py1.png' %}" class="img-fluid">
       </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="color: rgb(255,255,255)">
         <p><a class="link-offset-2 link-underline link-underline-opacity-0" href="https://stepik.org/course/68343/info">Stepik. Поколение Python": курс для продвинутых</a></p>
         <img src="{% static 'mainpage/img/py2.png' %}" class="img-fluid">
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container" style="color: rgb(255,255,255)">
     <div class="row">
       <div class="col-12">
-        <h2>Контакты для связи</h2>
+        <h2>Контакты для связи:</h2>
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container" style="color: rgb(255,255,255)">
     <div class="row">
       <div class="col-12">
         <p>Телефон: +7 (919) 406-53-72</p>
