--- a/testblog/mainpage/templates/mainpage/bio.html
+++ b/testblog/mainpage/templates/mainpage/bio.html
@@ -44,7 +44,7 @@
         </p>
       </div>
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-        <img src="{% static 'mainpage/img/my.jpg' %}" class="img-fluid">
+        <img src="{% static 'mainpage/img/my.jpg' %}" class="img-fluid rounded">
       </div>
     </div>
   </div>
@@ -59,15 +59,15 @@
     <div class="row">
       <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="color: rgb(255,255,255)">
         <p><a class="link-offset-2 link-underline link-underline-opacity-0" href="https://stepik.org/course/191774/info">Stepik. Введение в SQL</a></p><br>
-        <img src="{% static 'mainpage/img/sql.png' %}" class="img-fluid">
+        <img src="{% static 'mainpage/img/sql.png' %}" class="img-fluid rounded">
       </div>
       <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="color: rgb(255,255,255)">
         <p><a class="link-offset-2 link-underline link-underline-opacity-0" href="https://stepik.org/course/58852/info">Stepik. Поколение Python": курс для начинающих</a></p>
-        <img src="{% static 'mainpage/img/py1.png' %}" class="img-fluid">
+        <img src="{% static 'mainpage/img/py1.png' %}" class="img-fluid rounded">
       </div>
       <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="color: rgb(255,255,255)">
         <p><a class="link-offset-2 link-underline link-underline-opacity-0" href="https://stepik.org/course/68343/info">Stepik. Поколение Python": курс для продвинутых</a></p>
-        <img src="{% static 'mainpage/img/py2.png' %}" class="img-fluid">
+        <img src="{% static 'mainpage/img/py2.png' %}" class="img-fluid rounded">
       </div>
     </div>
   </div>
@@ -84,7 +84,6 @@
         <p>Телефон: +7 (919) 406-53-72</p>
         <p>Почта: <a class="link-offset-2 link-underline link-underline-opacity-0" href="mailto: tima.skye@yandex.ru">tima.skye@yandex.ru</a></p>
         <p>Telegram: <a class="link-offset-2 link-underline link-underline-opacity-0" href="https://t.me/tima_skye">@tima_skye</a></p>
-        <p>Также Вы можете заполнить <a class="link-offset-2 link-underline link-underline-opacity-0" href="{% url 'callback' %}">форму обратной связи</a></p>
       </div>
     </div>
   </div>
